--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,15 @@
             <version>2.3.9</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-api -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.3</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
